Scan-Matching-Localisation/error
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/c3-main.cpp: In function ‘int main()’:
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/c3-main.cpp:206:21: error: ‘scans’ was not declared in this scope; did you mean ‘scanf’?
  206 |    vg.setInputCloud(scans[0]);
      |                     ^~~~~
      |                     scanf
In file included from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/tuple/tuple.hpp:28,
                 from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/geometry/policies/relate/tupled.hpp:15,
                 from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/geometry/strategies/intersection_strategies.hpp:22,
                 from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/geometry/strategies/strategies.hpp:39,
                 from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/geometry/geometry.hpp:49,
                 from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/geometry.hpp:17,
                 from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/carla/geom/Rtree.h:11,
                 from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/carla/road/Map.h:10,
                 from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/carla/client/Map.h:13,
                 from /home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/c3-main.cpp:5:
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/tuple/detail/tuple_basic.hpp: In instantiation of ‘boost::tuples::cons<HT, TT>::cons(typename boost::tuples::access_traits<typename boost::tuples::detail::wrap_non_storeable_type<HT>::type>::parameter_type, const tail_type&) [with HT = boost::geometry::de9im::mask; TT = boost::tuples::cons<boost::geometry::de9im::mask, boost::tuples::null_type>; typename boost::tuples::access_traits<typename boost::tuples::detail::wrap_non_storeable_type<HT>::type>::parameter_type = const boost::geometry::de9im::mask&; boost::tuples::cons<HT, TT>::tail_type = boost::tuples::cons<boost::geometry::de9im::mask, boost::tuples::null_type>]’:
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/geometry/algorithms/detail/relate/de9im.hpp:200:66:   required from here
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/tuple/detail/tuple_basic.hpp:294:23: warning: implicitly-declared ‘constexpr boost::tuples::cons<boost::geometry::de9im::mask, boost::tuples::null_type>::cons(const boost::tuples::cons<boost::geometry::de9im::mask, boost::tuples::null_type>&)’ is deprecated [-Wdeprecated-copy]
  294 |     : head (h), tail(t) {}
      |                       ^
/home/ubuntu/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/libcarla-install/include/system/boost/tuple/detail/tuple_basic.hpp:400:9: note: because ‘boost::tuples::cons<boost::geometry::de9im::mask, boost::tuples::null_type>’ has user-provided ‘boost::tuples::cons<HT, boost::tuples::null_type>& boost::tuples::cons<HT, boost::tuples::null_type>::operator=(const boost::tuples::cons<HT, boost::tuples::null_type>&) [with HT = boost::geometry::de9im::mask]’
  400 |   cons& operator=(const cons& u) { head = u.head; return *this; }
      |         ^~~~~~~~
make[2]: *** [CMakeFiles/cloud_loc.dir/build.make:63: CMakeFiles/cloud_loc.dir/c3-main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:76: CMakeFiles/cloud_loc.dir/all] Error 2
make: *** [Makefile:84: all] Error 2

